--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ table>tbody>tr>td{height: 40px}
   .w10{width:10%} .w20{width:20%} .w30{width:30%} .w40{width:40%} .w50{width:50%}
   .w60{width:60%} .w70{width:70%} .w80{width:80%} .w90{width:90%} .w100{width:100%}
 
-  .mt-5{margin-top:5px}; .mt-10{margin-top:10px} .mt-20{margin-top:20px} .mt-30{margin-top:30px} 
+  .mt-5{margin-top:5px} .mt-10{margin-top:10px} .mt-20{margin-top:20px} .mt-30{margin-top:30px} 
   .mt-40{margin-top:40px} .mt-50{margin-top:50px}
 
   .mtb-5{margin-top:5px; margin-bottom:5px} .mtb-10{margin-top:10px; margin-bottom:10px}
